# maestria-taller-de-tesis-1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: cronograma-tesis.html  entrega1-doc.md  estado_del_arte_G2.docx  repaso_base_teorica_tesis.html  tecnicas-estructura.md  tesis-propuesta.md
entregas/: decisiones_features_G2.docx  entrega1-G2-v2.docx  entrega1-G2.docx  faqs-clase26-G2.docx  presentacion-g2-v2.pptx
notebooks/: 01_exploracion.ipynb  02_preprocesamiento.ipynb
